--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,12 @@
     "url": "https://github.com/Slackd/YouTube-Space/issues"
   },
   "homepage": "https://github.com/Slackd/YouTube-Space#readme",
-
   "dependencies": {
     "cors": "2.8.4",
     "dotenv": "6.1.0",
     "express": "4.16.4",
     "morgan": "1.9.1",
+    "node-fetch": "2.2.0",
     "nodemon": "1.18.4"
   }
 }
